--- a/Get-to-know-me.html
+++ b/Get-to-know-me.html
@@ -32,21 +32,32 @@ body {
 <body>
 	<header>
 		<h1>Welcome to my personal website!</h1>
-		<img class="minion" src="https://i.pinimg.com/originals/e3/c7/47/e3c747b1bf7b80b066f62d629209e694.gif" alt="minion gif hello" id="minime"/> <p>Click or hover the minion</p>
+		<img class="minion" src="https://i.pinimg.com/originals/e3/c7/47/e3c747b1bf7b80b066f62d629209e694.gif" alt="minion gif hello" id="minime"/> <p>Click or touch the minion</p>
 		<audio id="miley">
-			<source src=".\resources\Miley Cyrus_Fly On The Wall Lyrics.mp3" type="audio/mpeg">
+		  <source src=".\resources\Miley Cyrus_Fly On The Wall Lyrics.mp3" type="audio/mpeg">
 		</audio>
-	    <script>
-	        var image= document.getElementById('minime');
-	        var audio= document.getElementById("miley");
-	        image.addEventListener('mouseenter', function(){
-	        	audio.play();
-	        });
-	        image.addEventListener('mouseleave', function() {
-	            audio.pause();
-	            audio.currentTime = 0;
-	        });
-	    </script>
+		<script>
+		  var image = document.getElementById('minime');
+		  var audio = document.getElementById("miley");
+		  var audioPosition = 0; // variable to store audio position
+
+		  image.addEventListener('mouseenter', function() {
+		    audio.currentTime = audioPosition;
+		    audio.play();
+		  });
+		  image.addEventListener('mouseleave', function() {
+		    audioPosition = audio.currentTime;
+		    audio.pause();
+		  });
+		  image.addEventListener('touchstart', function() {
+		    audio.currentTime = audioPosition;
+		    audio.play();
+		  });
+		  image.addEventListener('touchend', function() {
+		    audioPosition = audio.currentTime;
+		    audio.pause();
+		  });
+		</script>
 	</header>
 	<main>
 		<h2>About me</h2>
