--- a/Get-to-know-me.html
+++ b/Get-to-know-me.html
@@ -62,13 +62,50 @@ body {
 	<main>
 		<h2>About me</h2>
 		<p>I am Alexandra and I am a beginner in the world of programming. I hope to become a Front-End Developer, as I really enjoy working with HTML, CSS and JavaScript.</p>
+		<p>When I am not working, I like to listen to music, to watch movies or TV shows and to read.</p>
+		<p>My favorite bands are Paramore, All Time Low and Waterparks.</p>
+		<p>I really enjoy the works of Jane Austen, Haruki Murakami and Paulo Coelho, amongst others.</p>
+		<p>When it comes to TV shows, my favorite is <em>"Friends".</em> As for movies, my favorite genre is animation, as I have watched a lot of them, from <em>"Coco"</em> to <em>"Wreck it, Ralph"</em>.</p>
+		<p>But I won't say no to live action movies! Some of my favorites are <em>"Star Wars"</em> or <em>"Pirates of the Caribbean"</em>.</p>
+		<hr>
+		<h2>Skills</h2>
+		<table>
+			<tr>
+				<td>HTML</td>
+				<td>🍓🍓🍓🍓🍓</td>
+			</tr>
+			<tr>
+				<td>CSS</td>
+				<td>🍓🍓🍓🍓</td>
+			</tr>
+			<tr>
+				<td>JS</td>
+				<td>🍓🍓🍓</td>
+			</tr>
+		</table>
+		<h6>*more strawberries to come 😁</h6>
+		<hr>
 		<h2>My portfolio</h2>
-		<p><a href="https://github.com/AlexandraPapadopol?tab=repositories" target="_blank"> Here</a> you can find my portfolio! Don't worry, more projects will come soon!
+		<p><a href="https://github.com/AlexandraPapadopol?tab=repositories" target="_blank"> Here</a> you can find my portfolio! Don't worry, more projects will come soon!</p>
+		<hr>
 		<h2>Contact me</h2>
-		<p>I am on <a href="https://www.linkedin.com/in/alexandra-p-989883244" target="_blank">LinkedIn</a> and on <a href="https://github.com/AlexandraPapadopol" target="_blank"> GitHub </a>
+		<p>I am on <a href="https://www.linkedin.com/in/alexandra-p-989883244" target="_blank">LinkedIn</a> and <a href="https://github.com/AlexandraPapadopol" target="_blank"> GitHub </a>.
+		<hr>
+		<p>You can also contact me through this form:</p>
+		<form action="mailto:alexandrapapadopol7@gmail.com" method="post" enctype="text/plain">
+			<label>Your Name:</label>
+			<input type="text" name="yourName"><br>
+			<label>Your Email:</label>
+			<input type="email" name="yourEmail"><br>
+			<label>Your Message:</label><br>
+			<textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+			<input type="submit">
+		</form>
 	</main>
 	<footer>
 <p><h6>DISCLAIMER! I do not own in any way or form the audio used in the making of this page. All rights are reserved to Miley Cyrus.</h6></p>
 	</footer>
+</body>
+</html>
 </body>
 </html>
