--- a/index.html
+++ b/index.html
@@ -2,63 +2,15 @@
 <head>
 	<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Get to know me</title>
-	<style>
-header {
-	background-color: rgb(0, 0, 0);
-	color: white;
-	padding: 20px;
-	text-align: auto;
-}
-body {
-	background-color: black;
-	color: white;
-}
-.minion{
-	width: 200px;
-	height: 200px;
-    box-shadow: 
-         inset 0 0 50px #fff,
-         inset 20px 0 60px red,
-         inset -20px 0 60px blue,
-         inset 20px 0 300px red,
-         inset -20px 0 300px blue,
-           0 0 50px #fff,
-           -10px 0 60px red,
-           10px 0 60px blue;
-}
-</style>
+	<title>Hi!</title>
+	<link rel="stylesheet" href="styles.css">
+	<link rel="icon" href="favicon.ico">
 </head>
 <body>
-	<header>
-		<h1>Welcome to my personal website!</h1>
-		<img class="minion" src="https://i.pinimg.com/originals/e3/c7/47/e3c747b1bf7b80b066f62d629209e694.gif" alt="minion gif hello" id="minime"/> <p>Click or touch the minion</p>
-		<audio id="miley">
-		  <source src=".\resources\Miley Cyrus_Fly On The Wall Lyrics.mp3" type="audio/mpeg">
-		</audio>
-		<script>
-		  var image = document.getElementById('minime');
-		  var audio = document.getElementById("miley");
-		  var audioPosition = 0; // variable to store audio position
-
-		  image.addEventListener('mouseenter', function() {
-		    audio.currentTime = audioPosition;
-		    audio.play();
-		  });
-		  image.addEventListener('mouseleave', function() {
-		    audioPosition = audio.currentTime;
-		    audio.pause();
-		  });
-		  image.addEventListener('touchstart', function() {
-		    audio.currentTime = audioPosition;
-		    audio.play();
-		  });
-		  image.addEventListener('touchend', function() {
-		    audioPosition = audio.currentTime;
-		    audio.pause();
-		  });
-		</script>
-	</header>
+	<div>
+		<h1>I'm Alexandra,</h1>
+		<p>future Front-End Developer</p>
+	</div>
 	<main>
 		<h2>About me</h2>
 		<p>I am Alexandra and I am a beginner in the world of programming. I hope to become a Front-End Developer, as I really enjoy working with HTML, CSS and JavaScript.</p>
@@ -103,7 +55,6 @@ body {
 		</form>
 	</main>
 	<footer>
-<p><h6>DISCLAIMER! I do not own in any way or form the audio used in the making of this page. All rights are reserved to Miley Cyrus.</h6></p>
 	</footer>
 </body>
 </html>
